# GAME_OF_LIFE

./: .gitignore  CMakeLists.txt  DefaultUniverse.txt  Life.cpp  MyConstants.hpp  SuppClasses.cpp  SuppClasses.hpp  SupportiveFunctions.cpp  SupportiveFunctions.hpp  SwitchClasses.cpp  SwitchClasses.hpp  WinClasses.cpp  WinClasses.hpp  WinProcesses.cpp  WinProcesses.hpp
Tests/: CMakeLists.txt  Tests.cpp
Tests/InputForTestGame/: CorrectInput_1.txt  ExpectingOutput.txt  IncorrectInput_2.txt  IncorrectInput_3.txt  IncorrectInput_4.txt
